# lab_1

./: config.status  configure.in  whoami  whoami.c
autom4te.cache/: output.0  traces.0
false/: Makefile  config.status  configure  configure.in
false/autom4te.cache/: output.0  traces.1
false/src/: Makefile  Makefile.in  false
hello_world/: Makefile  config.status  configure  configure.in
hello_world/autom4te.cache/: output.0  traces.1
hello_world/src/: Makefile  Makefile.in  hello_world  hello_world.c
hello_world/src/.deps/: hello_world.Po
lab5/: README.md  libproc-dev_3.2.8-11ubuntu6.4_amd64.deb  patch.diff  procps_3.2.8-11ubuntu6.4.dsc  procps_3.2.8-11ubuntu6.4_amd64.changes  procps_3.2.8-11ubuntu6.4_amd64.deb
lab5/procps-3.2.8/: free  pkill  slabtop  sysctl  tload  top  uptime  w  watch
lab5/procps-3.2.8/.pc/: applied-patches
lab5/procps-3.2.8/debian/libproc-dev/DEBIAN/: md5sums
lab5/procps-3.2.8/debian/procps/DEBIAN/: md5sums
lab5/procps-3.2.8/debian/procps/sbin/: sysctl
logname/: Makefile  Makefile.in  config.status  configure  configure.in  logname  logname.c
logname/autom4te.cache/: output.1  traces.0  traces.1
logname/src/: Makefile  Makefile.in  logname  logname.c
logname/src/.deps/: logname.Po
pwdx/src/: Makefile  ak_pwdx_envx.c  ak_pwdx_pwdenv.c  envx  envx.c  lev  pwdx  pwdx.c  xenv.c
true/: Makefile  config.status  configure  configure.in
true/autom4te.cache/: output.1  traces.1
true/src/: Makefile  Makefile.in  true
whoami/: configure  configure.in
whoami/src/: whoami.c
whoami/src/.deps/: whoami.Po
